MVC giriş yapildi

--- a/MvcUI/Views/Home/Index.cshtml
+++ b/MvcUI/Views/Home/Index.cshtml
@@ -17,6 +17,9 @@
         <td>Yazılım</td>
         <td>C# Eğitimi</td>
         <td>True</td>
+        <td>
+            <button class="btn btn-success">Güncelle</button>
+        </td>
     </tr>
 
     <tr>
@@ -24,6 +27,9 @@
         <td>Spor</td>
         <td>Fenerbahçe Sen Çok Yaşa</td>
         <td>True</td>
+        <td>
+            <button class="btn btn-success">Güncelle</button>
+        </td>
     </tr>
 
     <tr>
@@ -31,6 +37,13 @@
         <td>Haber</td>
         <td>Akşam Haberleri</td>
         <td>True</td>
+        <td>
+            <button class="btn btn-success">Güncelle</button>
+        </td>
     </tr>
 
 </table>
+<br />
+<button class="btn btn-danger">Kategori Listesi</button>
+<button class="btn btn-success">Kategori Ekle</button>
+<button class="btn btn-info">Kategori Sil</button>
