--- a/MvcUI/Views/Home/Index.cshtml
+++ b/MvcUI/Views/Home/Index.cshtml
@@ -44,6 +44,10 @@
 
 </table>
 <br />
-<button class="btn btn-danger">Kategori Listesi</button>
-<button class="btn btn-success">Kategori Ekle</button>
+<a href="/Category/AddCategory" class="btn btn-info"> Kategori Ekle </a>
+<a href="/Category/GetCategoryList" class="btn btn-info"> Kategori Listesi </a>
+<a href="/Writer/AddWriter" class="btn btn-info"> Yazar Ekle </a>
+<a href="/Writer/GetWriterList" class="btn btn-info"> Yazar Listesi </a>
+@*//<button class="btn btn-danger">Kategori Listesi</button>
+//<button class="btn btn-success"></button>*@
 <button class="btn btn-info">Kategori Sil</button>
