Admin panelinde kategori sayfası düzenlendi

--- a/MvcUI/Views/AdminCategory/GetCategoryList.cshtml
+++ b/MvcUI/Views/AdminCategory/GetCategoryList.cshtml
@@ -25,7 +25,7 @@
             <td>@item.CategoryId</td>
             <td>@item.CategoryName</td>
             <td><a href="/AdminCategory/DeleteCategory/@item.CategoryId" class="btn btn-danger">Sil</a></td>
-            <td><a href="#" class="btn btn-warning">Güncelle</a></td>
+            <td><a href="/AdminCategory/EditCategory/@item.CategoryId" class="btn btn-warning">Güncelle</a></td>
         </tr>
     }
 
