--- a/MvcUI/Views/AdminCategory/Index.cshtml
+++ b/MvcUI/Views/AdminCategory/Index.cshtml
@@ -1,8 +1,36 @@
-﻿
+﻿@using EntityLayer.Concrete
+@model List<Category>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "GetCategoryList";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Kategori Listesi</h2>
+<br />
 
+<table class="table table-hover">
+
+
+    <tr>
+        <th>#</th>
+        <th>Kategori Adı</th>
+        <th>Sil</th>
+        <th>Güncelle</th>
+        <th>Başlıklar</th>
+
+    </tr>
+
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <th>@item.CategoryId</th>
+            <td>@item.CategoryName</td>
+            <td><a href="/AdminCategory/DeleteCategory/@item.CategoryId" class="btn btn-danger">Sil</a></td>
+            <td><a href="/AdminCategory/EditCategory/@item.CategoryId" class="btn btn-warning">Güncelle</a></td>
+            <td><a href="^#" class="btn btn-primary">Başlıklar</a></td>
+        </tr>
+    }
+
+</table>
+<a href="/AdminCategory/AddCategory" class="btn btn-info">Yeni Kategori</a>
