--- a/MvcUI/Views/Writer/EditWriter.cshtml
+++ b/MvcUI/Views/Writer/EditWriter.cshtml
@@ -1,17 +1,20 @@
 ﻿@model EntityLayer.Concrete.Writer
 @{
-    ViewBag.Title = "AddWriter";
+    ViewBag.Title = "EditWriter";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>Yeni Yazar Ekleme</h1>
 <br />
-@using (Html.BeginForm("AddWriter", "Writer", FormMethod.Post))
+<h2>Yazar Düzenleme Sayfası</h2>
+@using (Html.BeginForm("EditWriter", "Writer", FormMethod.Post))
 {
     <div class="form-group">
+        @Html.Label("Yazar ID")
+        @Html.TextBoxFor(w => w.WriterId, new { @class = "form-control" })
+        <br />
         @Html.Label("Yazar Adı")
         @Html.TextBoxFor(w => w.WriterName, new { @class = "form-control" })
-        @Html.ValidationMessageFor(w => w.WriterName)
+        @Html.ValidationMessageFor(w => w.WriterName, null, new { @class = "text-danger" })
         <br />
         @Html.Label("Yazar Soyadı")
         @Html.TextBoxFor(w => w.WriterSurname, new { @class = "form-control" })
@@ -37,8 +40,7 @@
         @Html.TextBoxFor(w => w.WriterAbout, new { @class = "form-control" })
         @Html.ValidationMessageFor(w => w.WriterAbout)
         <br />
-        <button class="btn btn-info">Yazarı Ekle</button>
+        <button class="btn btn-success">Değişiklikleri Uygula</button>
 
     </div>
 }
-
