--- a/MvcUI/Views/Shared/_AdminLayout.cshtml
+++ b/MvcUI/Views/Shared/_AdminLayout.cshtml
@@ -36,7 +36,7 @@ to get the desired effect
             <a href="index3.html" class="brand-link">
                 <img src="~/AdminLTE-3.0.4/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
                      style="opacity: .8">
-                <span class="brand-text font-weight-light">AdminLTE 3</span>
+                <span class="brand-text font-weight-light">Admin</span>
             </a>
             <!-- Sidebar -->
             <div class="sidebar">
