--- a/MvcUI/Views/Heading/Index.cshtml
+++ b/MvcUI/Views/Heading/Index.cshtml
@@ -146,7 +146,7 @@
 </body>
 </html>
 
-
+<a href="/Heading/AddHeading/" class="btn btn-primary">Yeni Başlık Girişi</a>
 
 @*<h2>Index</h2>
     <br />
