--- a/MvcUI/Views/Heading/Index.cshtml
+++ b/MvcUI/Views/Heading/Index.cshtml
@@ -44,8 +44,11 @@
                             <th style="width: 20%">
                                 Başlık Adı
                             </th>
-                            <th style="width: 30%">
+                            <th style="width: 15%">
                                 Oluşturan Yazar
+                            </th>
+                            <th style="width: 10%">
+                                Durum
                             </th>
                             <th style="width: 8%" class="text-center">
                                 Kategori
@@ -114,24 +117,27 @@
                                     </li>
                                 </ul>
                             </td>
+                            <td>
+                                @item.HeadingStatus
+                            </td>
                             <td class="project-state">
                                 <span class="@color">@item.Category.CategoryName</span>
                             </td>
                             <td class="project-actions text-right">
-                                <a class="btn btn-primary btn-sm" href="#">
+                                <a class="btn btn-primary btn-sm" href="/Content/ContentByHeading/@item.HeadingId">
                                     <i class="fas fa-folder">
                                     </i>
                                     Yazılar
                                 </a>
-                                <a class="btn btn-info btn-sm" href="#">
+                                <a class="btn btn-info btn-sm" href="/Heading/EditHeading/@item.HeadingId">
                                     <i class="fas fa-pencil-alt">
                                     </i>
-                                    Edit
+                                    Düzenle
                                 </a>
-                                <a class="btn btn-danger btn-sm" href="#">
+                                <a class="btn btn-danger btn-sm" href="/Heading/DeleteHeading/@item.HeadingId">
                                     <i class="fas fa-trash">
                                     </i>
-                                    Delete
+                                    Sil
                                 </a>
                             </td>
                         </tr>
