--- a/MvcUI/Views/Heading/Index.cshtml
+++ b/MvcUI/Views/Heading/Index.cshtml
@@ -107,13 +107,13 @@
                                 </a>
                                 <br />
                                 <small>
-                                    @item.HeadingDate
+                                    @(((DateTime)item.HeadingDate).ToString("dd-MMM-yyyy"))
                                 </small>
                             </td>
                             <td>
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
-                                        <img alt="Avatar" class="table-avatar" src="~/AdminLTE-3.0.4/dist/img/avatar.png">
+                                        <img alt="Avatar" class="table-avatar" src="@item.Writer.WriterImage">
                                     </li>
                                 </ul>
                             </td>
