--- a/MvcUI/Views/Contact/MessageListMenu.cshtml
+++ b/MvcUI/Views/Contact/MessageListMenu.cshtml
@@ -24,8 +24,9 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="/Message/Sendbox/" class="nav-link">
                         <i class="far fa-envelope"></i> Gönderilen Mesajlar
+                        <span class="badge bg-primary float-right">12</span>
                     </a>
                 </li>
                 <li class="nav-item">
