--- a/MvcUI/Views/Contact/GetContactDetails.cshtml
+++ b/MvcUI/Views/Contact/GetContactDetails.cshtml
@@ -17,14 +17,9 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1>Compose</h1>
+                    <h1>İletişim Sayfası Mesajları</h1>
                 </div>
-                <div class="col-sm-6">
-                    <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item active">Compose</li>
-                    </ol>
-                </div>
+                
             </div>
         </div><!-- /.container-fluid -->
     </section>
@@ -32,83 +27,12 @@
     <section class="content">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-3">
-                    <a href="mailbox.html" class="btn btn-primary btn-block mb-3">Back to Inbox</a>
-                    <div class="card">
-                        <div class="card-header">
-                            <h3 class="card-title">Folders</h3>
-                            <div class="card-tools">
-                                <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                                    <i class="fas fa-minus"></i>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="card-body p-0">
-                            <ul class="nav nav-pills flex-column">
-                                <li class="nav-item active">
-                                    <a href="#" class="nav-link">
-                                        <i class="fas fa-inbox"></i> Inbox
-                                        <span class="badge bg-primary float-right">12</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="far fa-envelope"></i> Sent
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="far fa-file-alt"></i> Drafts
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="fas fa-filter"></i> Junk
-                                        <span class="badge bg-warning float-right">65</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="far fa-trash-alt"></i> Trash
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- /.card-body -->
-                    </div>
-                    <!-- /.card -->
-                    <div class="card">
-                        <div class="card-header">
-                            <h3 class="card-title">Labels</h3>
-                            <div class="card-tools">
-                                <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                                    <i class="fas fa-minus"></i>
-                                </button>
-                            </div>
-                        </div>
-                        <!-- /.card-header -->
-                        <div class="card-body p-0">
-                            <ul class="nav nav-pills flex-column">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#"><i class="far fa-circle text-danger"></i> Important</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#"><i class="far fa-circle text-warning"></i> Promotions</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#"><i class="far fa-circle text-primary"></i> Social</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- /.card-body -->
-                    </div>
-                    <!-- /.card -->
-                </div>
+                @Html.Action("MessageListMenu", "Contact")
                 <!-- /.col -->
                 <div class="col-md-9">
                     <div class="card card-primary card-outline">
                         <div class="card-header">
-                            <h3 class="card-title">Read Mail</h3>
+                            <h3 class="card-title">Gelen Mesaj Detayları</h3>
                             <div class="card-tools">
                                 <a href="#" class="btn btn-tool" data-toggle="tooltip" title="Previous"><i class="fas fa-chevron-left"></i></a>
                                 <a href="#" class="btn btn-tool" data-toggle="tooltip" title="Next"><i class="fas fa-chevron-right"></i></a>
@@ -119,11 +43,11 @@
 
                         <div class="card-body p-0">
                             <div class="mailbox-read-info">
-                                <h5>Konu: @Html.DisplayFor(x=>x.Subject)</h5>
-                                <br />  
+                                <h5>Konu: @Html.DisplayFor(x => x.Subject)</h5>
+                                <br />
                                 <h6>
                                     Mail: @Html.DisplayFor(x => x.UserMail)
-                                    <span class="mailbox-read-time float-right">15 Feb. 2015 11:03 PM</span>
+                                    <span class="mailbox-read-time float-right">>@DateTime.Parse(Html.DisplayFor(x => x.ContactDate).ToString()).ToShortDateString()</span>
                                 </h6>
                             </div>
                             <!-- /.mailbox-read-info -->
@@ -146,8 +70,8 @@
                             </div>
                             <!-- /.mailbox-controls -->
                             <div class="mailbox-read-message">
-                                <p>@Html.DisplayFor(x=>x.Message)</p>
-                              
+                                <p>@Html.DisplayFor(x => x.Message)</p>
+
                             </div>
                             <!-- /.mailbox-read-message -->
                         </div>
