--- a/MvcUI/Views/Contact/Index.cshtml
+++ b/MvcUI/Views/Contact/Index.cshtml
@@ -86,7 +86,7 @@
                                                 <b></b> @item.Message.Substring(0,30)...
                                             </td>
                                             <td class="mailbox-attachment"></td>
-                                            <td class="mailbox-date"></td>
+                                            <td class="mailbox-date">@(((DateTime)item.ContactDate).ToString("dd-MMM-yyyy"))</td>
                                         </tr>
                                     }
                                 </tbody>
