--- a/MvcUI/Views/Contact/MessageListMenu.cshtml
+++ b/MvcUI/Views/Contact/MessageListMenu.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="col-md-3">
-    <a href="compose.html" class="btn btn-primary btn-block mb-3">Gelen Kutusu</a>
+    <a href="/Message/NewMessage/" class="btn btn-primary btn-block mb-3">Yeni Mesaj Oluştur</a>
     <div class="card">
         <div class="card-header">
             <h3 class="card-title">Seçenekler</h3>
@@ -14,19 +14,19 @@
                 <li class="nav-item active">
                     <a href="/Contact/Index/" class="nav-link">
                         <i class="fas fa-mail-bulk"></i> İletişim
-                        <span class="badge bg-primary float-right">12</span>
+                        <span class="badge bg-primary float-right">@TempData["ContactCount"]</span>
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a href="/Message/Inbox" class="nav-link">
                         <i class="fas fa-inbox"></i> Gelen Mesajlar
-                        <span class="badge bg-primary float-right">12</span>
+                        <span class="badge bg-primary float-right">@TempData["InboxCount"]</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="/Message/Sendbox/" class="nav-link">
                         <i class="far fa-envelope"></i> Gönderilen Mesajlar
-                        <span class="badge bg-primary float-right">12</span>
+                        <span class="badge bg-primary float-right">@TempData["SendCount"]</span>
                     </a>
                 </li>
                 <li class="nav-item">
