--- a/MvcUI/Views/Content/ContentByHeading.cshtml
+++ b/MvcUI/Views/Content/ContentByHeading.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using EntityLayer.Concrete
+@model List<Content>
 @{
     ViewBag.Title = "ContentByHeading";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
