Kullanıcı sayfası için düzenlemeler yapıldı.

--- a/MvcUI/Views/Default/Headings.cshtml
+++ b/MvcUI/Views/Default/Headings.cshtml
@@ -1,4 +1,6 @@
-﻿@{ Layout = null; }
+﻿@using EntityLayer.Concrete
+@model List<Heading>
+@{ Layout = null; }
 
 <!DOCTYPE html>
 <html lang="en">
@@ -52,16 +54,17 @@ to get the desired effect
                 <!-- Sidebar Menu -->
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                      
 
-                        <li class="nav-item">
-                            <a href="/WriterPanel/MyHeading/" class="nav-link">
-                                <p>
-                                   Başlık 1
-                                </p>
-                            </a>
-                        </li>
-
+                        @foreach (var item in Model)
+                        {
+                            <li class="nav-item">
+                                <a href="/WriterPanel/MyHeading/" class="nav-link">
+                                    <p>
+                                        @item.HeadingName 
+                                    </p>
+                                </a>
+                            </li>
+                        }
                     </ul>
                 </nav>
                 <!-- /.sidebar-menu -->
@@ -71,8 +74,9 @@ to get the desired effect
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
             <!-- Main content -->
+            @Html.Action("Index", "Defaut");
             <div class="content">
-               
+
                 <!-- /.container-fluid -->
             </div>
             <!-- /.content -->
