Sayfalar arası geçişler yapıldı.

--- a/MvcUI/Views/Default/Headings.cshtml
+++ b/MvcUI/Views/Default/Headings.cshtml
@@ -58,7 +58,7 @@ to get the desired effect
                         @foreach (var item in Model)
                         {
                             <li class="nav-item">
-                                <a href="/WriterPanel/MyHeading/" class="nav-link">
+                                <a href="/Default/Headings/" class="nav-link">
                                     <p>
                                         @item.HeadingName 
                                     </p>
