--- a/MvcUI/Views/Shared/_WriterLayout.cshtml
+++ b/MvcUI/Views/Shared/_WriterLayout.cshtml
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="~/AdminLTE-3.0.4/dist/css/adminlte.min.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    <link href="~/Content/PagedList.css" rel="stylesheet" />
 </head>
 <!--
 BODY TAG OPTIONS:
@@ -36,7 +37,7 @@ to get the desired effect
             <a href="index3.html" class="brand-link">
                 <img src="~/AdminLTE-3.0.4/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
                      style="opacity: .8">
-                <span class="brand-text font-weight-light">Yazar Paneli</span>
+                <span class="brand-text font-weight-light">Mvc Projesi</span>
             </a>
             <!-- Sidebar -->
             <div class="sidebar">
@@ -46,25 +47,25 @@ to get the desired effect
                         <img src="~/AdminLTE-3.0.4/dist/img/Enes.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a href="#" class="d-block">Enes Çetintaş</a>
+                        <a href="#" class="d-block">Yazar Paneli</a>
                     </div>
                 </div>
                 <!-- Sidebar Menu -->
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
-                        with font-awesome or any other icon font library -->
+    with font-awesome or any other icon font library -->
 
-                       
-                            <li class="nav-item has-treeview">
-                                <a href="/AdminCategory/Index/" class="nav-link">
-                                    <i class="nav-icon fas fa-tachometer-alt"></i>
-                                    <p>
-                                        Profilim
-                                    </p>
-                                </a>
-                            </li>
-                        
+
+                        <li class="nav-item has-treeview">
+                            <a href="/WriterPanel/WriterProfile/" class="nav-link">
+                                <i class="nav-icon fas fa-tachometer-alt"></i>
+                                <p>
+                                    Profilim
+                                </p>
+                            </a>
+                        </li>
+
                         <li class="nav-item">
                             <a href="/WriterPanel/MyHeading/" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
@@ -73,12 +74,21 @@ to get the desired effect
                                 </p>
                             </a>
                         </li>
-                        
+
+                        <li class="nav-item">
+                            <a href="/WriterPanel/AllHeading/" class="nav-link">
+                                <i class="nav-icon fas fa-list-alt"></i>
+                                <p>
+                                    Tüm Başlıklar
+                                </p>
+                            </a>
+                        </li>
+
                         <li class="nav-item has-treeview">
-                            <a href="/WriterPanelMessage/SendBox/" class="nav-link">
+                            <a href="/WriterPanelMessage/Inbox/" class="nav-link">
                                 <i class="nav-icon fas fa-edit"></i>
                                 <p>
-                                   Mesajlar
+                                    Mesajlar
                                 </p>
                             </a>
                         </li>
@@ -91,9 +101,9 @@ to get the desired effect
                                 </p>
                             </a>
                         </li>
-                        
+
                         <li class="nav-item has-treeview">
-                            <a href="#" class="nav-link">
+                            <a href="/Default/Headings/" class="nav-link">
                                 <i class="nav-icon fas fa-book"></i>
                                 <p>
                                     Siteye Git
@@ -102,7 +112,7 @@ to get the desired effect
 
                         </li>
                         <li class="nav-item has-treeview">
-                            <a href="#" class="nav-link">
+                            <a href="/Login/LogOut/" class="nav-link">
                                 <i class="nav-icon fas fa-apple-alt"></i>
                                 <p>
                                     Çıkış yap
