Yazım hatası düzeltildi.

--- a/MvcUI/Views/AdminCategory/Index.cshtml
+++ b/MvcUI/Views/AdminCategory/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Kategori Listesi</h2>
 <br />
 
-<table class="table table-hover">
+<table class="table table-bordered">
 
 
     <tr>
@@ -28,7 +28,7 @@
             <td>@item.CategoryName</td>
             <td><a href="/AdminCategory/DeleteCategory/@item.CategoryId" class="btn btn-danger">Sil</a></td>
             <td><a href="/AdminCategory/EditCategory/@item.CategoryId" class="btn btn-warning">Güncelle</a></td>
-            <td><a href="^#" class="btn btn-primary">Başlıklar</a></td>
+            <td><a href="#" class="btn btn-primary">Başlıklar</a></td>
         </tr>
     }
 
