Yazım hatası düzeltildi.

--- a/MvcUI/Views/Default/Headings.cshtml
+++ b/MvcUI/Views/Default/Headings.cshtml
@@ -74,12 +74,7 @@ to get the desired effect
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
             <!-- Main content -->
-            @Html.Action("Index", "Defaut");
-            <div class="content">
-
-                <!-- /.container-fluid -->
-            </div>
-            <!-- /.content -->
+            @Html.Action("Index", "Default")
         </div>
         <!-- /.content-wrapper -->
     </div>
@@ -108,6 +103,6 @@ to get the desired effect
     <!-- Summernote -->
     <script src="~/AdminLTE-3.0.4/plugins/summernote/summernote-bs4.min.js"></script>
     <!-- Page Script -->
-    <script>
+    
 </body >
 </html >
