--- a/MvcUI/Views/Login/WriterLogin.cshtml
+++ b/MvcUI/Views/Login/WriterLogin.cshtml
@@ -6,7 +6,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Mvc Proje Kampı</title>
+    <title>Blog Sitesi</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
