--- a/MvcUI/Views/WriterPanel/WriterProfile.cshtml
+++ b/MvcUI/Views/WriterPanel/WriterProfile.cshtml
@@ -4,44 +4,44 @@
     Layout = "~/Views/Shared/_WriterLayout.cshtml";
 }
 
-@{ Layout = null; }
 
 <h2>Profilinizi Düzenleyin</h2>
 @using (Html.BeginForm("WriterProfile", "WriterPanel", FormMethod.Post))
 {
-    <div class="form-group">
-        @*@Html.Label("Yazar ID")*@
-        @Html.HiddenFor(w => w.WriterId, new { @class = "form-control" })
-        <br />
-        @Html.Label("Yazar Adı")
-        @Html.TextBoxFor(w => w.WriterName, new { @class = "form-control" })
-        @Html.ValidationMessageFor(w => w.WriterName, null, new { @class = "text-danger" })
-        <br />
-        @Html.Label("Yazar Soyadı")
-        @Html.TextBoxFor(w => w.WriterSurname, new { @class = "form-control" })
-        @Html.ValidationMessageFor(w => w.WriterSurname)
-        <br />
-        @Html.Label("Yazar Mail")
-        @Html.TextBoxFor(w => w.WriterMail, new { @class = "form-control" })
-        @Html.ValidationMessageFor(w => w.WriterMail)
-        <br />
-        @Html.Label("Yazar Şifresi")
-        @Html.TextBoxFor(w => w.Password, new { @class = "form-control" })
-        @Html.ValidationMessageFor(w => w.Password)
-        <br />
-        @Html.Label("Yazar Görsel Linki")
-        @Html.TextBoxFor(w => w.WriterImage, new { @class = "form-control" })
-        @Html.ValidationMessageFor(w => w.WriterImage)
-        <br />
-        @Html.Label("Yazar Ünvan")
-        @Html.TextBoxFor(w => w.WriterTitle, new { @class = "form-control" })
-        @Html.ValidationMessageFor(w => w.WriterTitle)
-        <br />
-        @Html.Label("Yazar Hakkında")
-        @Html.TextBoxFor(w => w.WriterAbout, new { @class = "form-control" })
-        @Html.ValidationMessageFor(w => w.WriterAbout)
-        <br />
-        <button class="btn btn-success">Değişiklikleri Uygula</button>
+<div class="form-group">
+    @*@Html.Label("Yazar ID")*@
+    @Html.HiddenFor(w => w.WriterId)
+    <br />
 
-    </div>
+    @Html.Label("Yazar Adı")
+    @Html.TextBoxFor(w => w.WriterName, new { @class = "form-control" })
+    @Html.ValidationMessageFor(w => w.WriterName, null, new { @class = "text-danger" })
+    <br />
+    @Html.Label("Yazar Soyadı")
+    @Html.TextBoxFor(w => w.WriterSurname, new { @class = "form-control" })
+    @Html.ValidationMessageFor(w => w.WriterSurname, null, new { @class = "text-danger" })
+    <br />
+    @Html.Label("Yazar Mail")
+    @Html.TextBoxFor(w => w.WriterMail, new { @class = "form-control" })
+    @Html.ValidationMessageFor(w => w.WriterMail, null, new { @class = "text-danger" })
+    <br />
+    @Html.Label("Yazar Şifresi")
+    @Html.TextBoxFor(w => w.Password, new { @class = "form-control" })
+    @Html.ValidationMessageFor(w => w.Password, null, new { @class = "text-danger" })
+    <br />
+    @Html.Label("Yazar Görsel Linki")
+    @Html.TextBoxFor(w => w.WriterImage, new { @class = "form-control" })
+    @Html.ValidationMessageFor(w => w.WriterImage)
+    <br />
+    @Html.Label("Yazar Ünvan")
+    @Html.TextBoxFor(w => w.WriterTitle, new { @class = "form-control" })
+    @Html.ValidationMessageFor(w => w.WriterTitle, null, new { @class = "text-danger" })
+    <br />
+    @Html.Label("Yazar Hakkında")
+    @Html.TextBoxFor(w => w.WriterAbout, new { @class = "form-control" })
+    @Html.ValidationMessageFor(w => w.WriterAbout, null, new { @class = "text-danger" })
+    <br />
+    <button class="btn btn-success">Değişiklikleri Uygula</button>
+
+</div>
 }
