--- a/MvcUI/Views/AdminCategory/AddCategory.cshtml
+++ b/MvcUI/Views/AdminCategory/AddCategory.cshtml
@@ -5,25 +5,35 @@
     ViewBag.Title = "AddCategory";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="~/Scripts/jquery-3.4.1.js"></script>
+
+
 <h2>Yeni Kategori Ekleme Sayfası</h2>
 <br />
 @using (Html.BeginForm("AddCategory", "AdminCategory", FormMethod.Post))
 {
     <div class="form-group">
-        
+
         @Html.Label("Kategori Adı")
-        @Html.TextBoxFor(p => p.CategoryName , new {@class = "form-control" })
+        @Html.TextBoxFor(p => p.CategoryName, new { @class = "form-control" })
         @Html.ValidationMessageFor(p => p.CategoryName)
 
 
         @Html.Label("Açıklama : ")
-        @Html.TextAreaFor(p => p.CategoryDescription , new { @class = "form-control" })
+        @Html.TextAreaFor(p => p.CategoryDescription, new { @class = "form-control" })
         @Html.ValidationMessageFor(p => p.CategoryDescription)
         <br />
-        <button class="btn btn-info">Kaydet</button>
-
+        <button class="btn btn-info" id="btn">Kaydet</button>
     </div>
 
 
+
+    <script>
+        $('#btn').click(function () {
+            swal("Tebriklerr!", "Başarılı bir şekilde eklendi!", "success");
+        })
+    </script>
 
 }
