--- a/MvcUI/Views/AdminCategory/EditCategory.cshtml
+++ b/MvcUI/Views/AdminCategory/EditCategory.cshtml
@@ -4,20 +4,30 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="~/Scripts/jquery-3.4.1.js"></script>
+
 <h2>Kategori Güncelle</h2>
 
 @using (Html.BeginForm("EditCategory", "AdminCategory", FormMethod.Post))
 {
-<div class="form-group">
+    <div class="form-group">
 
-    @Html.Label("Kategori Id", new {@class="form-control" })
-    @Html.TextBoxFor(p => p.CategoryId, new { @class = "form-control" })
-    @Html.Label("Kategori Adı", new { @class = "form-control" })
-    @Html.TextBoxFor(p => p.CategoryName , new { @class = "form-control" })
-    @Html.Label("Kategori Açıklaması", new { @class = "form-control" })
-    @Html.TextAreaFor(p => p.CategoryDescription, new { @class = "form-control" })
-    <br />
-    <button btn class="btn btn-success">Güncelle</button>
-</div>
-    
+        @Html.Label("Kategori Id", new { @class = "form-control" })
+        @Html.TextBoxFor(p => p.CategoryId, new { @class = "form-control" })
+        @Html.Label("Kategori Adı", new { @class = "form-control" })
+        @Html.TextBoxFor(p => p.CategoryName, new { @class = "form-control" })
+        @Html.Label("Kategori Açıklaması", new { @class = "form-control" })
+        @Html.TextAreaFor(p => p.CategoryDescription, new { @class = "form-control" })
+        <br />
+        <button class="btn btn-success" id="btn">Güncelle</button>
+    </div>
+
+
+    <script>
+        $('#btn').click(function () {
+            swal("Tebriklerr!", "Başarılı bir şekilde eklendi!", "success");
+        })
+    </script>
+
 }
