Tanıtım sayfası projeyle ilgili düzenlendi.

--- a/MvcUI/Views/Home/HomePage.cshtml
+++ b/MvcUI/Views/Home/HomePage.cshtml
@@ -77,7 +77,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </div>
                 <ul class="text-center nav-honey">
                     <li>
-                        <a href="index.html" class="active ">Ana Sayfa</a>
+                        <a class="scroll" href="#home" >Ana Sayfa</a>
                     </li>
                     <li>
                         <a class="scroll" href="#about">Geliştirme Araçları</a>
@@ -92,7 +92,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <a class="scroll" href="#contact">İletişim</a>
                     </li>
                     <li>
-                        <a class="scroll" href="#contact">Sözlük</a>
+                        <a href="/Default/Headings/1">Sözlük</a>
                     </li>
 
                     <li class="login">
@@ -298,16 +298,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </div>
     </section>
     <!-- //services -->
-    <!-- /experience -->
-    <section class="experience py-lg-5 py-4" id="experience">
-        <div class="timeline py-lg-5 py-3">
-            <h4 class="sub-tittle-w3 text-uppercase text-center">Experience</h4>
-            <h3 class="tittle-w3 text-uppercase mb-lg-5 mb-3 text-center">Job & Education</h3>
-            <div id="my-timeline"></div>
-        </div>
-
-    </section>
-    <!-- //experience -->
     <!--gallery  -->
     <section class="gallery py-md-5 py-3" id="projects">
         <div class="gallery-inner container py-md-5 pb-3">
@@ -317,11 +307,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 {
                     <div class="col-md-4 proj_gallery_grid" data-aos="zoom-in">
                         <div class="section_1_gallery_grid">
-                            <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g1.jpg">
+                            <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="@item.Picture">
                                 <div class="section_1_gallery_grid1">
                                     <img src="@item.Picture" alt=" " class="img-fluid" />
                                     <div class="proj_gallery_grid1_pos">
-                                        <h3>Recognize</h3>
+                                        <h3>Görsel @item.Id</h3>
                                     </div>
                                 </div>
                             </a>
@@ -341,29 +331,29 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-sm-3 col-6 stats_info counter_grid">
 
                     <i class="far fa-lightbulb"></i>
-                    <p class="counter">645</p>
-                    <h4>Projects Done</h4>
+                    <p class="counter">158</p>
+                    <h4>Başlık Sayısı</h4>
 
                 </div>
                 <div class="col-sm-3 col-6 stats_info counter_grid1">
 
                     <i class="far fa-heart"></i>
-                    <p class="counter">563</p>
-                    <h4>Satisfied Clients</h4>
+                    <p class="counter">1485</p>
+                    <h4>Entry Sayısı</h4>
 
                 </div>
                 <div class="col-sm-3 col-6 stats_info counter_grid">
 
                     <i class="fas fa-magic"></i>
-                    <p class="counter">1145</p>
-                    <h4>Awards</h4>
+                    <p class="counter">146</p>
+                    <h4>Yazar Sayısı</h4>
 
                 </div>
                 <div class="col-sm-3 col-6 stats_info counter_grid2">
 
                     <i class="far fa-smile"></i>
-                    <p class="counter">1045</p>
-                    <h4>Happy Clients</h4>
+                    <p class="counter">365</p>
+                    <h4>Mesaj Sayısı</h4>
 
                 </div>
             </div>
@@ -373,47 +363,32 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- /testimonials -->
     <div class="testimonials py-lg-5 py-4" id="clients">
         <div class="testimonials-inner container py-lg-4 py-3">
-            <h4 class="sub-tittle-w3 text-uppercase text-center">Testimonials</h4>
-            <h3 class="tittle-w3 text-uppercase mb-lg-5 mb-3 text-center">What They Says</h3>
+            <h4 class="sub-tittle-w3 text-uppercase text-center">Kısa Notlar</h4>
+            <h3 class="tittle-w3 text-uppercase mb-lg-5 mb-3 text-center">Projeye Dair</h3>
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
                         <div class="testimonials_grid center">
                             <div class="testimonials_grid-inn text-uppercase">
                                 <i class="fas fa-quote-left"></i>
-                                <p>Lorem ipsum dolor sit amet,Maecenas interdum magna quam egestas sem, ac scelerisque nisl nibh vel lacus. Proin eget gravida odio. Donec ullamcorper est eu accumsan cursus.</p>
+                                <p>Projeyi geliştirirken .Net Mvc5 ile solid prensiplerine uygun bir şekilde n katmanlı mimari yapısını kullanarak kendimi geliştirmeye çalıştım. Yazılım kursundan kalan vakitlerimde bu projeyi bitirmeye çalıştım. Projeyi yaklaşık 2 ayda tamamladım.</p>
                             </div>
-                            <h3>Gretchen </h3>
-
-                            <label>United States</label>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="testimonials_grid text-center">
                             <div class="testimonials_grid-inn text-uppercase">
                                 <i class="fas fa-quote-left"></i>
-                                <p>Lorem ipsum dolor sit amet,Maecenas interdum magna quam egestas sem, ac scelerisque nisl nibh vel lacus. Proin eget gravida odio. Donec ullamcorper est eu accumsan cursus.</p>
+                                <p>Ben kendimi geliştirirmeye çalışırken ve yeni bilgiler öğrenirken çok keyif alıyorum. Bu proje ile bir çok yeni bilgiye, hatalar karşısında ne yapmam gerektiğiyle ilgili teknik bilgiye sahip oldum. Bu proje için Murat Yücedağ hocamıza teşekkür ediyorum..</p>
                             </div>
-                            <h3>
-                                Anne Marc
-
-                            </h3>
-                            <label>United States</label>
-
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="testimonials_grid">
                             <div class="testimonials_grid-inn text-uppercase">
                                 <i class="fas fa-quote-left"></i>
-                                <p>Maecenas interdum, metus vitae tincidunt porttitor, magna quam egestas sem, ac scelerisque nisl nibh vel lacus. Proin eget gravida odio. Donec ullamcorper est eu accumsan cursus.</p>
-
+                                <p>Bu proje uzun süredir aklımda olan mvc dünyasına kurulsal mimari ile giriş yaptıgım ve sonucunda ortaya çıkan güzel bir proje oldu. Yazılım kursundan öğrendiğim bilgiler ve internetten araştırmalarım sonucunda projeyi tamamladım.</p>
                             </div>
-                            <h3>
-                                Harry Baker
-
-                            </h3>
-                            <label>United States</label>
 
                         </div>
                     </div>
@@ -435,8 +410,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <section class="contact py-lg-5 py-md-5 py-3" id="contact">
         <div class="container">
             <div class="inner-sec-w3ls py-lg-5 py-3">
-                <h4 class="sub-tittle-w3 text-uppercase text-center">Find Me</h4>
-                <h3 class="tittle-w3 text-uppercase mb-lg-5 mb-3 text-center text-white">Contact Me Now</h3>
+                <h3 class="tittle-w3 text-uppercase mb-lg-5 mb-3 text-center text-white">İletişim</h3>
 
                 <div class="contact_grid_right">
                     <form action="#" method="post">
@@ -444,24 +418,24 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <div class="col-md-6 con-left" data-aos="fade-up">
                                 <div class="form-group">
 
-                                    <input class="form-control" type="text" name="Name" placeholder="" required="">
+                                    <input class="form-control" type="text" name="Name" placeholder="Adınız" required="">
                                 </div>
                                 <div class="form-group">
 
-                                    <input class="form-control" type="email" name="Email" placeholder="" required="">
+                                    <input class="form-control" type="email" name="Email" placeholder="Mail Adresiniz" required="">
                                 </div>
                                 <div class="form-group">
 
-                                    <input class="form-control" type="text" name="Subject" placeholder="" required="">
+                                    <input class="form-control" type="text" name="Subject" placeholder="Konu" required="">
                                 </div>
                             </div>
                             <div class="col-md-6 con-right" data-aos="fade-up">
                                 <div class="form-group">
-                                    <textarea id="textarea" placeholder="" required=""></textarea>
+                                    <textarea id="textarea" placeholder="Mesajınız" required=""></textarea>
                                 </div>
                             </div>
                             <div class="sub-honey mx-auto mt-3">
-                                <input class="form-control" type="submit" value="Submit">
+                                <input class="form-control" type="submit" value="Gönder">
                             </div>
                         </div>
                     </form>
@@ -474,9 +448,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <i class="far fa-map"></i>
                             </div>
                             <div class="address-right text-center">
-                                <h6 class="my-3">Address</h6>
+                                <h6 class="my-3">Adres</h6>
                                 <p>
-                                    California, USA
+                                   İstanbul, Türkiye
 
                                 </p>
                             </div>
@@ -492,7 +466,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <h6 class="my-3">Email</h6>
                                 <p>
                                     Email :
-                                    <a href="mailto:example@email.com"> mail@example.com</a>
+                                    <a href="mailto:example@email.com"> enesctnts@gmail.com</a>
 
                                 </p>
                             </div>
@@ -505,8 +479,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <i class="fas fa-mobile-alt"></i>
                             </div>
                             <div class="address-right text-center">
-                                <h6 class="my-3">Phone</h6>
-                                <p>+1 234 567 8901</p>
+                                <h6 class="my-3">Telefon</h6>
+                                <p>+90 545 881 71 35</p>
 
                             </div>
 
@@ -526,27 +500,27 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <ul class="list-footer" data-aos="fade-up">
                         <li>
                             <a href="#home" class="nav-link scroll">
-                                Home
+                                Ana Sayfa
                             </a>
                         </li>
                         <li class="my-2">
                             <a href="#about" class="nav-link scroll">
-                                About
+                                Geliştirme Araçları
                             </a>
                         </li>
                         <li class="my-2">
                             <a href="#services" class="nav-link scroll">
-                                Services
+                                Hakkında
                             </a>
                         </li>
                         <li class="mb-2">
                             <a href="#projects" class="nav-link scroll">
-                                Projects
+                                Görseller
                             </a>
                         </li>
                         <li>
                             <a href="#contact" class="nav-link scroll">
-                                Contact Us
+                                İletişim
                             </a>
                         </li>
                     </ul>
@@ -555,35 +529,30 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <ul class="list-footer" data-aos="fade-up">
                         <li>
                             <a href="#register" data-toggle="modal" data-target="#exampleModalCenter" class="nav-link scroll">
-                                Login
+                                Giriş Yap
                             </a>
                         </li>
                         <li class="my-2">
                             <a href="#" data-toggle="modal" data-target="#exampleModalCenter2" class="nav-link">
-                                Register
-                            </a>
-                        </li>
-                        <li class="my-2">
-                            <a href="#" class="nav-link">
-                                License
+                                Kayıt Ol
                             </a>
                         </li>
                     </ul>
                 </div>
                 <div class="offset-lg-4"></div>
                 <div class="col-lg-4 footer-end-grid mt-md-0 mt-sm-5" data-aos="fade-up">
-                    <h2>
+                    <h4>
                         <a href="index.html">
-                            <i class="fas fa-crosshairs"></i> Recognize
+                            <i class="fas fa-crosshairs"></i> Bloklar Arası
                         </a>
-                    </h2>
+                    </h4>
                 </div>
             </div>
             <hr>
             <div class="d-flex justify-content-between pt-lg-3  footer-bottom-cpy">
                 <div class="copy-right-w3ls">
                     <p>
-                        © 2018 Recognize. All rights reserved | Design by
+                        © 2021 Bloklar Arası. Tüm hakları saklıdır | Design by
                         <a href="http://w3layouts.com/"> W3layouts </a>
 
                     </p>
@@ -614,6 +583,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </div>
             </div>
         </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3010.045567838589!2d29.126045764893433!3d41.024259003581676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cac8da3ad0f901%3A0xd3590081f2c2fa78!2sMeydan%20%C3%9Cmraniye%20Avm!5e0!3m2!1sen!2str!4v1651662164923!5m2!1sen!2str" width="1000" height="450" style="border:0;  margin:50px 120px; " allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
     <!--//footer-->
     <!--model-forms-->
