--- a/MvcUI/AdminLTE-3.0.4/web/css/style.css
+++ b/MvcUI/AdminLTE-3.0.4/web/css/style.css
@@ -263,7 +263,7 @@ div#word-mark h1 a {
 /*-- /header --*/
 
 .banner_section {
-    background: url(../images/banner.jpg) no-repeat 0px 0px;
+    background: url(/AdminLTE-3.0.4/web/images/contact.jpg) no-repeat 0px 0px;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
